# talkbox

./: .gitattributes  .gitignore  README.md  agent-context.yaml  bench_embeddings.py  docker-compose.yml  install.sh  kiosk-setup.sh  ngrok-update.sh  pointer_kiosk_roadmap.yaml  talkbox  twilio-sync.sh
pointer-fork/backend/: docker-entrypoint.sh  main.py  pyproject.toml
pointer-fork/backend/alembic/: env.py
pointer-fork/backend/src/application/services/: kiosk_call_service.py  kiosk_query_service.py  query_handler.py  sms_async_response.py
pointer-fork/backend/src/domain/services/: query_categorizer.py
pointer-fork/backend/src/infrastructure/: config.py  database.py  seed_admin.py
pointer-fork/backend/src/infrastructure/healthscout_agent/: healthscout_db_schema.py  healthscout_extractor.py  healthscout_schema.py  prompt_template.py
pointer-fork/backend/src/infrastructure/llm/: factory.py
pointer-fork/backend/src/infrastructure/seeds/: agency_seeder.py  kiosk_mock_catalog.json
pointer-fork/backend/src/infrastructure/seeds/query_categories/: 02_womens_shelter.json  04_transport.json  05_shelter.json  13_mental_health_clinic.json  15_hospital.json  16_medical_clinic.json  17_lgbtq.json  18_legal.json  19_irs.json  20_housing.json  (+3 more)
pointer-fork/backend/src/infrastructure/sms/: twilio_sms_service.py
pointer-fork/backend/src/infrastructure/vector_store/: pgvector_query_categorizer.py
pointer-fork/backend/src/infrastructure/voice/: twilio_voice_service.py
pointer-fork/backend/src/presentation/: api.py  auth.py  kiosk_routes.py  middleware.py  routes.py
(+146 files in other folders)
